[rce] fix(baseToolbar): removed overflow-x which disabled toolbar panels

--- a/rich-content-editor/src/Styles/plugin-toolbar.scss
+++ b/rich-content-editor/src/Styles/plugin-toolbar.scss
@@ -13,7 +13,6 @@
   z-index: 4;
   box-sizing: border-box;
   max-width: 100%;
-  overflow-x: auto;
 }
 
 .buttons {
